--- a/custom/rent/views/rental_order_view.xml
+++ b/custom/rent/views/rental_order_view.xml
@@ -2,7 +2,6 @@
     <data>
 
         <!-- Rental Order Tree View -->
-        <!-- Rental Order Tree View -->
         <record id="rental_order_tree_view" model="ir.ui.view">
             <field name="name">sale.order.tree.rental</field>
             <field name="model">sale.order</field>
@@ -29,7 +28,7 @@
                     <button name="reset_dates" string="Reset Dates" type="object" class="btn-secondary"/>
                 </xpath>
                 <!-- Restrict product selection to rentable products -->
-                <xpath expr="//field[@name='product_id']" position="attributes">
+                <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="attributes">
                     <attribute name="domain">[('can_be_rented', '=', True)]</attribute>
                 </xpath>
                 <!-- Add rental-specific fields to order line tree view -->
@@ -40,31 +39,28 @@
                 </xpath>
                 <!-- Add rental-specific state transitions -->
                 <xpath expr="//header" position="inside">
-                    <xpath expr="/button[@name='action_quotation_send']" position="attributes">
-                    <attribute name="attrs">{'invisible': [('state', 'not in', ['draft'])]}</attribute>
-                </xpath>
-                <xpath expr="//button[@name='action_confirm']" position="attributes">
-                    <attribute name="attrs">{'invisible': [('state', 'not in', ['sent', 'confirmed'])]}</attribute>
-                </xpath>
-                <xpath expr="//button[@name='action_cancel']" position="attributes">
-                    <attribute name="attrs">{'invisible': [('state', 'not in', ['draft', 'sent', 'confirmed',
-                        'pickup'])]}
-                    </attribute>
-                </xpath>
+                    <xpath expr="//button[@name='action_quotation_send']" position="attributes">
+                        <attribute name="attrs">{'invisible': [('state', 'not in', ['draft'])]}</attribute>
+                    </xpath>
+                    <xpath expr="//button[@name='action_confirm']" position="attributes">
+                        <attribute name="attrs">{'invisible': [('state', 'not in', ['draft', 'sent'])]}</attribute>
+                    </xpath>
+                    <xpath expr="//button[@name='action_cancel']" position="attributes">
+                        <attribute name="attrs">{'invisible': [('state', 'not in', ['draft', 'sent', 'confirmed',
+                            'pickup'])]}
+                        </attribute>
+                    </xpath>
                     <button name="preview_sale_order" string="Customer Preview" type="object" class="btn-primary"
                             attrs="{'invisible': [('state', '!=', 'confirmed')]}"/>
                     <button name="action_pickup_order" string="Pickup Order" type="object" class="btn-primary"
                             attrs="{'invisible': [('state', '!=', 'reserved')]}"/>
-                    <button name="action_draft" string="Draft" type="object" class="btn-primary"
-                           />
                     <button name="action_return_order" string="Return Order" type="object" class="btn-primary"
                             attrs="{'invisible': [('state', '!=', 'rented')]}"/>
                 </xpath>
-                <!-- Modify button visibility based on order state -->
-
             </field>
         </record>
 
+        <!-- Pickup Order Wizard View -->
         <record id="pickup_order_wizard_view" model="ir.ui.view">
             <field name="name">pickup.order.wizard.form</field>
             <field name="model">pickup.order.wizard</field>
@@ -83,6 +79,7 @@
             </field>
         </record>
 
+        <!-- Return Order Wizard View -->
         <record id="return_order_wizard_view" model="ir.ui.view">
             <field name="name">return.order.wizard.form</field>
             <field name="model">return.order.wizard</field>
@@ -100,12 +97,15 @@
                 </form>
             </field>
         </record>
+
+        <!-- Rental Orders Action -->
         <record id="action_rental_order" model="ir.actions.act_window">
             <field name="name">Rental Orders</field>
             <field name="res_model">sale.order</field>
             <field name="view_mode">tree,form,kanban</field>
-            <field name="context">{'search_default_rented': 1, 'default_state': 'rented'}</field>
-            <field name="domain">[('state', '=', 'rented')]</field>
+            <!-- Update or remove the context setting related to default_state -->
+            <field name="context">{'search_default_rented': 1}</field>  <!-- Updated context without default_state -->
+            <field name="domain">[('state', '!=', 'cancel')]</field>
         </record>
     </data>
 </odoo>
